--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BreadBrowser</title>
+    <link rel="icon" href="/Imgs/BreadIcon.png" type="image/x-icon"/>
 </head>
 <body>
+    <button id="UnlockButton"onclick="Unlock()">Enter Password</button>
     <div id="Website">
         <iframe id="frame" src="" style="border:0px #ffffff none;" name="Site" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="500" width="100%" allowfullscreen></iframe>
         <div id="Buttons">
+            <img src="/Imgs/BreadBar.png" alt="">
             <div id="Row1">
                 <button id="BingButton" onclick="BingButton()">Open Bing</button>
                 <button id="URLButton" onclick="redirect()">Change URL</button>
