--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button id="UnlockButton"onclick="Unlock()">Enter Password</button>
     <div id="Website">
         <iframe id="frame" src="" style="border:5px #373737 block;" name="Site" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="500" width="100%" allowfullscreen></iframe>
-        <img src="/Imgs/BreadBar.png" alt="">
+        <img src="/Imgs/BreadBar.png" alt="bread">
         <div class="Buttons">
             <div id="Row1">
                 <button id="URLButton" onclick="redirect(iFrameID, sitesVisited)" class="centerButton">Change URL</button>
